# py-tacview-client

./: .gitignore  LICENSE  README.md  build.py  build_setuptools.py  pyproject.toml  setup.py
scripts/: init_database.py  profile_tac_consumer.py
tacview_client/: __init__.py  cli.py  client.py  config.py  copy_writer.py  cython_funs.c  cython_funs.cpp  cython_funs.pyx  db.py  serve_file.py  weapon-db.csv
tests/: debug.py  serve_test_data.py  test_py_tacview_client.py  test_tacview_client.py
