[tool.poetry]
name = "tacview-client"
version = "0.1.65"
description = ""
authors = ["mcdelaney <mcdelaney@gmail.com>"]
repository = "https://github.com/mcdelaney/py-tacview-client.git"


[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.15"
asyncpg = "^0.20.1"
click = "^7.1.2"
pytz = "^2020.5"
typer = "^0.3.2"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yappi = "^1.2.3"
alembic = "^1.4.2"
pytest-asyncio = "^0.10.0"

[tool.poetry.scripts]
tacview = "tacview_client.cli:app"

[tool.poetry.urls]
issues = "https://github.com/mcdelaney/py-tacview-client/issues"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

