[tool.poetry]
name = "tacview-client"
version = "0.1.81"
description = ""
authors = ["mcdelaney <mcdelaney@gmail.com>"]
repository = "https://github.com/mcdelaney/py-tacview-client.git"

build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.9"
asyncpg = "^0.27.0"
click = "^7.1.2"
pytz = "^2020.5"
typer = "^0.3.2"
SQLAlchemy = "1.4.51"
Cython = "^0.29.21"
numpy = "1.23.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
yappi = "^1.2.3"
alembic = "^1.4.2"
pytest-asyncio = "^0.23.3"

[tool.poetry.scripts]
tacview = "tacview_client.cli:app"

[tool.poetry.urls]
issues = "https://github.com/mcdelaney/py-tacview-client/issues"

[build-system]
requires = ["poetry>=0.12", "cython", "setuptools", "numpy"]
build-backend = "poetry.masonry.api"

